--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -14,3 +14,8 @@
     --ifm-hero-background-color: #257dc2;
     --ifm-hero-text-color: #fff;
 }
+
+.hero--primary {
+  --ifm-hero-background-color: #24b3c4 !important;
+  --ifm-hero-text-color: var(--ifm-font-color-base-inverse);
+}
