--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,9 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+
+.hero--primary {
+  --ifm-hero-background-color: #24b3c4 !important;
+  --ifm-hero-text-color: var(--ifm-font-color-base-inverse);
+}
